# PremLeeg

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  schema_snapshot.json
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: cli.py  main.py
backend/app/agent/: CLUB_METRICS_ROUTING.md  __init__.py  club_metrics_routing.py  golden_prompts.py  golden_questions.py  pipeline.py  prompts.py  schema_snapshot.py  sql_templates.py  validate_sql.py
backend/app/context/: __init__.py  football_data_notes.py  team_names.py
backend/app/db/: __init__.py  client.py  schema_snapshot.py
backend/app/examples/: player_queries.md
backend/app/llm/: __init__.py  client.py  langchain_client.py  openai_client.py
backend/app/models/: types.py
backend/tests/: test_club_metrics_routing.py
data/: download_and_clean_epl.py  requirements.txt  scrape_fbref_standard_stats.py
data/data/epl/clean/: pl_matches_all.csv
data/epl/: download_manifest.csv
data/epl/clean/0001/: pl_matches.csv
data/epl/clean/0102/: pl_matches.csv
data/epl/clean/0203/: pl_matches.csv
data/epl/clean/0405/: pl_matches.csv
data/epl/clean/0708/: pl_matches.csv
data/epl/clean/1011/: pl_matches.csv
data/epl/clean/1213/: pl_matches.csv
data/epl/clean/1415/: pl_matches.csv
data/epl/clean/1718/: pl_matches.csv
data/epl/clean/1819/: pl_matches.csv
data/epl/clean/1920/: pl_matches.csv
data/epl/clean/2223/: pl_matches.csv
data/fbref_player/: batch_clean_fbref_player_standard.py  finalize_all_for_db.py  pl_player_standard_stats_ALL_db.csv  scrape_fbref_player_standard_raw_all_seasons.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  main.jsx  theme.js
frontend/src/components/: ArchitectureTab.jsx  ChatTab.jsx  GuidelinesTab.jsx  SchemaTab.jsx
(+21 files in other folders)
